--- a/styles/skills.css
+++ b/styles/skills.css
@@ -17,15 +17,7 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin-bottom: 5rem;
-}
-
-@media (min-width: 900px) {
-    .cards-wrapper {
-        flex-direction: row;
-        justify-content: center;
-        align-items: flex-start;
-    }
+    margin-bottom: 6rem;
 }
 
 .card {
@@ -102,21 +94,30 @@ h1 {
 .loader::after {
     content: '';
     position: absolute;
+    border-radius: var(--radius-full);
     inset: 0;
-    background: linear-gradient(90deg,
-            transparent,
-            rgba(255, 255, 255, 0.4),
-            transparent);
     animation: shimmer 2s infinite;
 }
 
 @keyframes shimmer {
     0% {
-        transform: translateX(-100%);
+        transform: translateX(-.1%);
+        background: linear-gradient(90deg,
+            rgba(255, 255, 255, 0.6),
+            transparent);
+    }
+    50% {
+        transform: translateX(.1%);
+        background: linear-gradient(90deg,
+            transparent,
+            rgba(255, 255, 255, 0.6));
     }
 
     100% {
-        transform: translateX(100%);
+        transform: translateX(-.1%);
+        background: linear-gradient(90deg,
+            rgba(255, 255, 255, 0.6),
+            transparent);
     }
 }
 
@@ -155,6 +156,14 @@ h1 {
 
 .skill-item:nth-child(6) {
     animation-delay: 0.6s;
+}
+
+@media (min-width: 900px) {
+    .cards-wrapper {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+    }
 }
 
 @media (max-width: 768px) {
