--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,6 +8,13 @@
     gap: 2rem;
 }
 
+@media (max-width: 768px) {
+    .content {
+        width: 90vw;
+        align-items: unset;
+    }
+}
+
 h1 {
     text-align: center;
     font-size: 2.5rem;
