--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,6 @@
 .content {
     width: 100%;
+    margin-top: 120px;
     max-width: 1200px;
     padding: 2rem;
     display: flex;
@@ -16,7 +17,6 @@ h1 {
     background-clip: text;
     color: transparent;
     font-weight: 700;
-    margin-bottom: 2rem;
 }
 
 .contact-container {
@@ -50,6 +50,7 @@ h1 {
     gap: 1rem;
     padding: 1rem;
     background: rgba(255, 255, 255, 0.03);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 12px;
     transition: all 0.3s ease;
 }
@@ -170,8 +171,7 @@ textarea.form-control {
     height: 300px;
     border-radius: 12px;
     overflow: hidden;
-    margin-top: 1rem;
-    margin-bottom: 4rem;
+    margin-bottom: 60px;
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -192,7 +192,6 @@ textarea.form-control {
     color: var(--color-accent);
 }
 
-/* Mobile Responsive Styles */
 @media (max-width: 768px) {
     body {
         padding: 10px;
@@ -210,7 +209,7 @@ textarea.form-control {
     
     h1 {
         font-size: 1.8rem;
-        margin-bottom: 2rem;
+        /* margin-bottom: 2rem; */
     }
     
     .contact-container {
@@ -272,7 +271,7 @@ textarea.form-control {
     
     .map-container {
         height: 250px;
-        margin-bottom: 2rem;
+        margin-bottom: 0rem;
     }
     
     .map-placeholder i {
