--- a/styles/skills.css
+++ b/styles/skills.css
@@ -48,6 +48,10 @@ h1 {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
+.cards-wrapper .card .skill-item:last-child {
+    margin-bottom: 0;
+}
+
 .skill-header {
     display: flex;
     justify-content: space-between;
