--- a/styles/general.css
+++ b/styles/general.css
@@ -52,8 +52,8 @@ header {
     top: 0;
     display: flex;
     justify-content: space-between;
-    width: 95%;
-    text-align: center;
+    width: 100%;
+    height: 90px;
     padding: 2rem 0;
     border-bottom: rgba(0, 96, 113, 0.16) 2px solid;
     backdrop-filter: blur(10px);
@@ -63,6 +63,7 @@ header {
 .logo {
     display: flex;
     align-items: center;
+    margin-left: 1rem;
     gap: 1rem;
     text-decoration: none;
 }
